Add company logo to navbar

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <section class="navigation">
                 <div class="nav-container">
                   <div class="brand">
-                    <a href="#!"><img class="brand-image" src="images/logo-image.png" alt="ABEP Logo"></a>
-                    <h4 class="brand-name">ABEP</h4>
+                    <a href="#!"><img class="brand-image" src="images/ABEP-logo.png" alt="ABEP Logo"></a>
+                    
                   </div>
                   <nav>
                     <div class="nav-mobile">
