Add logo image to footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/navbar.css">
         <link rel="stylesheet" href="css/footer.css">
          <link rel="stylesheet" href="css/navbar.css">
+         <script defer src="script.js"></script>
 
          <link href="
 https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
@@ -134,7 +135,7 @@ https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
             <section id="footer">
               <div class="main-footer">
                 <div class="logoinfo" data-aos="fade-up">
-                  <h2>ABEP</h2>
+                  <img id="footer-logo" src="images/ABEP-logo.png" alt="ABEP Logo">
                   <p>By Zeeshan Nisar</p>
             
                   <div class="contact-details">
