Test commit to feature/slidehow branch

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css
                  
         <header>
             <p class="about-company">
-                AGBIOENG Processing Specialists Inc. is a Canadian start-up business entity focused on providing expert advice; sharing technological application ideas; co-develop a process / product of higher value at the interface of Agriculture and Bioresources (land, water, energy and food) by appropriate R & D interventions and enhanced business and commercialization potential. Dr. Venkatesh Meda is an expert researcher and an entrepreneur in the field of agri-food, feed and bioprocessing sector for adding value and improving post- harvest losses and economic potential. His academic experience spans over two decades cutting across several disciplines is recognized globally.
+                This is a test. AGBIOENG Processing Specialists Inc. is a Canadian start-up business entity focused on providing expert advice; sharing technological application ideas; co-develop a process / product of higher value at the interface of Agriculture and Bioresources (land, water, energy and food) by appropriate R & D interventions and enhanced business and commercialization potential. Dr. Venkatesh Meda is an expert researcher and an entrepreneur in the field of agri-food, feed and bioprocessing sector for adding value and improving post- harvest losses and economic potential. His academic experience spans over two decades cutting across several disciplines is recognized globally.
             </p>
             <img src="images/global-research.jpg" alt="global research">
         </header>  
